# system

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  testing.yml
src/: custom_errors.rs  custom_type.rs  errors.rs  functions.rs  lib.rs  log.rs  logger.rs  rwarc.rs  stringy.rs  types.rs  version.rs
src/core/: errors.rs  errors_dep.rs  functions.rs  logger.rs  mod.rs  version.rs
src/core/errors/: mod.rs
src/core/errors/collections/: error_array.rs  mod.rs  warning_array.rs
src/core/errors/enums/: errors.rs  mod.rs  unified.rs  warnings.rs
src/core/errors/implementations/: conversions.rs  display.rs  first_class.rs  mod.rs
src/core/errors/structs/: error_item.rs  mod.rs  okwarning.rs  warning_item.rs
src/core/types/: controls.rs  mod.rs  pathtype.rs  rb.rs  rwarc.rs  stringy.rs
src/platform/: functions.rs  mod.rs
src/tests/: errors.rs  errors_test.rs  functions.rs  pathtype.rs  rb.rs  rwarc.rs  stringy.rs  version.rs
src/types/: controls.rs  mod.rs  pathtype.rs  rb.rs  stringy.rs
