[package]
name = "system"
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-modes="0.8.1"
hex = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.3"
regex = "1.10.4"
pretty = { git = "https://github.com/Dj-Codeman/pretty.git" }
rand = "0.8.5"
reqwest = "0.12.4"
serde_yaml = "0.9.34"
rustversion = "1.0.16"
cfg_rust_features = "0.1.2"
nix = "0.23.0"

# Old version for error conversions
#recs = { git = "https://github.com/Dj-Codeman/recs.git"}
#logging = { git = "https://github.com/Dj-Codeman/logger.git"}