[package]
name = "system"
version = "2.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-modes="0.8.1"
hex = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.3"
regex = "1.10.4"
simple_pretty = "0.1.0"
rand = "0.8.5"
reqwest = "0.12.4"
serde_yaml = "0.9.34"
rustversion = "1.0.16"
cfg_rust_features = "0.1.2"
nix = "0.20.0"

#ais_collection_utils