[package]
name = "dusa_collection_utils"
version = "3.1.0"
edition = "2021"
authors = ["Darrion Whitfield <dwhitfield@ramfield.net>"]
description = "A common library with standardized functions that the ais_platform, dusa, recs and others will depend on"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-modes="0.8.1"
hex = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.10"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
walkdir = "2.3"
regex = "1.10.4"
simple_pretty = "0.1.0"
rand = "0.8.5"
reqwest = "0.12.4"
serde_yaml = "0.9.34"
rustversion = "1.0.16"
cfg_rust_features = "0.1.2"
nix = "0.20.0"
lazy_static = "1.5.0"
colored = "2.1.0"
tempfile = "3.14.0"